--- a/src/app/pages/auth/signin/signin.component.html
+++ b/src/app/pages/auth/signin/signin.component.html
@@ -1,1 +1,17 @@
-<p>signin works!</p>
+<div class="row">
+    <div class="col-sm-8 col-sm-offset-2">
+        <h2>Se connecter</h2>
+        <form [formGroup]="signInForm" (ngSubmit)="onSubmit()">
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="text" id="email" class="form-control" formControlName="email" />
+            </div>
+            <div class="form-group">
+                <label for="password">Mot de passe</label>
+                <input type="password" id="email" class="form-control" formControlName="password" />
+            </div>
+            <button type="submit" class="btn btn-primary" [disabled]="signInForm.invalid">Connexion</button>
+        </form>
+        <p class="text-danger">{{ errorMessage }}</p>
+    </div>
+</div>
