--- a/src/app/pages/book-list/book-form/book-form.component.html
+++ b/src/app/pages/book-list/book-form/book-form.component.html
@@ -10,6 +10,12 @@
                 <label for="author">Auteur</label>
                 <input type="text" class="form-control" id="author" formControlName="author" />
             </div>
+            <div class="form-group">
+                <label for="synopsis">Synopsis</label>
+                <textarea id="synopsis"
+                          class="form-control" formControlName="synopsis">
+                </textarea>
+            </div>
             <button type="submit" class="btn btn-success" [disabled]="bookForm.invalid">Enregistrer</button>
         </form>
     </div>
