--- a/src/app/pages/book-list/book-form/book-form.component.html
+++ b/src/app/pages/book-list/book-form/book-form.component.html
@@ -16,7 +16,12 @@
                           class="form-control" formControlName="synopsis">
                 </textarea>
             </div>
-            <button type="submit" class="btn btn-success" [disabled]="bookForm.invalid">Enregistrer</button>
+            <div class="form-group">
+                <h4>Ajouter une photo</h4>
+                <input type="file" (change)="detectFiles($event)" class="form-control" accept="image/*" />
+                <p class="text-success" *ngIf="fileUploaded">Fichier chargé !</p>
+            </div>
+            <button type="submit" class="btn btn-success" [disabled]="bookForm.invalid || fileIsUploading">Enregistrer</button>
         </form>
     </div>
 </div>
